2006-01-06  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5291
          FORM multipart/form-data with GET method issue

        Test cases: 
        * fast/forms/form-get-multipart.html
        * fast/forms/form-get-multipart2.html
        * fast/forms/form-get-multipart3.html
        * fast/forms/form-post-urlencoded.html

        * khtml/html/html_formimpl.cpp:
        (DOM::HTMLFormElementImpl::submit):
        Reset m_multipart to false if not posting.
        (DOM::HTMLFormElementImpl::parseEnctype):
        multipart/form-data doesn't imply POST method.

2006-01-06  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Eric.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5792
          Crasher on rendering-shapes from SVG 1.0 testsuite

        Test case: fast/parser/entity-ignorable-whitespace.xhtml

        * khtml/xml/xml_tokenizer.cpp:
        (khtml::XMLTokenizer::finish): install an ignorableWhitespace callback to
        work around a libxml2 bug
        (khtml::ignorableWhitespaceHandler): no-op

2006-01-06  Anders Carlsson  <andersca@mac.com>

        Reviewed by Eric.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5142
        parseXMLDocumentFragment can't parse fragments correctly
        
        * khtml/xml/xml_tokenizer.cpp:
        (khtml::balancedStartElementNsHandler):
        (khtml::balancedEndElementNsHandler):
        (khtml::balancedCharactersHandler):
        (khtml::balancedProcessingInstructionHandler):
        (khtml::balancedCdataBlockHandler):
        (khtml::balancedCommentHandler):
        (khtml::balancedWarningHandler):
        Add handlers.
        
        (khtml::parseXMLDocumentFragment):
        Change back into using xmlParseBalancedChunkMemory. 

2006-01-06  Alexander Kellett  <lypanov@kde.org>

        Reviewed by eseidel.

        Basic support for <mask> tag.