@@ -1,0 +1,28 @@
+<html>
+<head><script>
+function print(message) {
+    var paragraph = document.createElement("p");
+    paragraph.appendChild(document.createTextNode(message));
+    document.getElementById("console").appendChild(paragraph);
+}
+
+function test()
+{
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+        
+    var e = document.createEvent("MouseEvents");
+    e.initEvent("click", true, false);
+    document.getElementById('a').dispatchEvent(e);
+    print("PASS");
+}
+</script></head>
+
+<body onload="test()">
+<p>Bug: <a href="http://bugzilla.opendarwin.org/show_bug.cgi?id=6382">REGRESSION: Repro crash when clicking link with target="_blank"</a></p>
+<p>If the test passes, you will see a PASS message below. (It's normal for a new window to open.)</p>
+<hr>
+<a id="a" href="resources/popup200x200.html" target="_blank"></a>
+<div id='console'/>
+</body>
+</html>
